# fl-microbiome-mpegG

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: feature_description.md  federated_approach.md
notebook/: 01_exploration_data.ipynb  02_mgb_extraction_features.ipynb  03_preprocessing_engineering.ipynb  04_centralized_model.ipynb  05_federated_model.ipynb
results/metrics/: centralized_metrics.csv
src/: carbon_tracking.py  client_app.py  data_processing.py  feature_engineering.py  server_app.py  task.py
