[project]
name = "fl-microbiome-mpegg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.87",
    "flwr[simulation]>=1.29.0",
    "h5py>=3.16.0",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-bio>=0.7.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
